Created an NSided shape which can be used for any shape that has more than 4 sides